--- a/report/Theory/theory.tex
+++ b/report/Theory/theory.tex
@@ -246,7 +246,11 @@ The tense of each line can be found by analysing the verb in that sentence. CLiP
 We record the tense of each line as well as the overall tense of the poem. Each line in the cat poem in Figure \ref{fig:cat} is in past tense giving a past tense overall. The limerick in Figure \ref{fig:limerick} is in present tense overall because all but one line, is in present tense. 
 
 
+\subsection{Mood, Modality, Subjectivity, Polarity}
+
+
 \subsection{N-Grams}
+
 
 \subsection{Topics}
 
