--- a/report/Appendix1/appendix1.tex
+++ b/report/Appendix1/appendix1.tex
@@ -385,6 +385,70 @@ Further rephrasing of lifted sentences, such as the last one, could be beneficia
 \item{dog: IsA $\rightarrow$ dog}
 \end{itemize}
 
+\section{Evaluation Poems}
+
+\subsection{The Book of Limericks}
+\ref{sec:book}
+There was an old woman of Lynn,
+Whose nose very near reach'd her chin;
+You may easy suppose
+She had plenty of beaux,
+This charming old woman of Lynn.
+
+There was an old woman of Gloster,
+Whose parrot two guineas it cost her;
+But his tongue never ceasing,
+Was vastly displeasing,
+To that talkative woman of Gloster.
+
+There was a sick man of Tobago,
+Lived long on rice-gruel and sago;
+But at last, to his bliss,
+The physician said this:
+'To a roast leg of mutton you may go.'
+
+There was an old miser of Reading,
+Had a house with a yard, with a shed in;
+'Twas meant for a cow,
+But so small that I vow
+The poor creature could scarce get its head in.
+
+There was a young person in pink,
+Who called out for something to drink;
+But they said, 'O my daughter,
+There's nothing but water!'
+Which vexed that young person in pink.
+
+There was an old person of Sheen,
+Whose expression was calm and serene;
+He sat in the water,
+And drank bottled porter,
+That placid old person of Sheen.
+
+There was an old person of Florence,
+Who held mutton chops in abhorrence;
+He purchased a bustard,
+And fried him in mustard,
+Which choked that old person of Florence.
+
+There was an old person of Loo,
+Who said, 'What on earth shall I do?'
+When they said, 'Go away!'
+She continued to stay,
+That vexatious old person of Loo.
+
+There was an old man of Spithead,
+Who opened the window and said - 
+'Fil-jomble, fil-jumble,
+Fil-rumble-come-tumble!'
+That doubtful old man of Spithead.
+
+There was an old person of Brigg,
+Who purchased no end of a Wig;
+So that only his nose
+And the end of his toes
+Could be seen when he waled about Brigg.
+
 % ------------------------------------------------------------------------
 
 %%% Local Variables: 
